# mcp-client-demo

./: .mcp_chat_history  README.md  client.py  client_openai.py  client_openai_v2.py  client_openai_v3.py  pyproject.toml  requirements.txt  servers_config.json  servers_config_v3.json  test.txt
