[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "mcp>=1.6.0",
    "mcp-server-fetch>=2025.4.7",
    "openai>=1.73.0",
    "prompt-toolkit>=3.0.50",
    "python-dotenv>=1.1.0",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
